# libmodbus-e2e

./: .gitignore  AUTHORS  CODE_OF_CONDUCT.md  Makefile.am  NEWS  README.md  SECURITY.md  configure.ac  libmodbus_e2e.pc.in  mkdocs.yml  pkg.sh
.github/workflows/: build.yml
debian/: .gitignore  changelog  control  copyright  libmodbus-e2e-dev.docs  libmodbus-e2e-dev.install  libmodbus-e2e0.docs  libmodbus-e2e0.install  libmodbus-e2e0.symbols
debian/upstream/: metadata
docs/: index.md  modbus_mask_write_register.md  modbus_read_input_bits.md  modbus_read_input_registers2.md  modbus_read_registers2.md  modbus_write_and_read_registers.md  modbus_write_and_read_registers2.md  modbus_write_register.md  modbus_write_registers.md
src/: Makefile.am  modbus-version.h.in  modbus.c  modbus.h
src/win32/: Make-tests  README.md  config.h.win32  configure.js  endian-win32.h  modbus_e2e-9.sln  modbus_e2e.dll.manifest.in  modbus_e2e.rc  modbus_e2e.vcproj
tests/: LICENSE  Makefile.am  README.md  unit-test-client.c  unit-tests.sh  version.c
